@@ -1,4 +1,6 @@
 2023/01/15
+- Fixed beginner and Invitation from the Water
+  pulls not showing
 - Bug fixes
 - Added Centurion banner
 
